Updated mm2 configs

--- a/integration-tests/mm2-configs/mirror-source-connector.properties
+++ b/integration-tests/mm2-configs/mirror-source-connector.properties
@@ -5,14 +5,13 @@ source.cluster.alias=src
 target.cluster.alias=dst
 source.cluster.bootstrap.servers=localhost:9092
 target.cluster.bootstrap.servers=localhost:9093
-topics=customer
+topics=^customer[\\w]*
 tasks.max=2
 key.converter=com.amazonaws.services.crossregion.schemaregistry.kafkaconnect.CrossRegionReplicationConverter
 value.converter=com.amazonaws.services.crossregion.schemaregistry.kafkaconnect.CrossRegionReplicationConverter
 replication.factor=1
 offset-syncs.topic.replication.factor=1
-sync.topic.acls.interval.seconds=20
-sync.topic.configs.interval.seconds=20
+sync.topic.acls.enabled=false
 refresh.topics.interval.seconds=20
 refresh.groups.interval.seconds=20
 consumer.group.id=mm2-msc-cons
