--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -1,17 +1,13 @@
 services:
-  zookeeper:
+  zk1:
     image: 'public.ecr.aws/bitnami/zookeeper:latest'
-    ports:
-      - '2181'
-    container_name: local_zk
+    container_name: zk1
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
   
-  zookeeper2:
+  zk2:
     image: 'public.ecr.aws/bitnami/zookeeper:latest'
-    ports:
-      - '2181'
-    container_name: local_zk2
+    container_name: zk2
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
 
@@ -19,33 +15,46 @@ services:
     image: 'public.ecr.aws/bitnami/kafka:2.8'
     ports:
       - '9092:9092'
-    links:
-      - zookeeper
-    container_name: local_kafka
+    container_name: kafka
     environment:
       - KAFKA_BROKER_ID=1
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_LISTENERS=PLAINTEXT://0.0.0.0:9092
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zk1:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_LISTENERS=CLIENT://:29092,EXTERNAL://:9092
+      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka:29092,EXTERNAL://localhost:9092
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
 
   kafka-target:
     image: 'public.ecr.aws/bitnami/kafka:2.8'
     ports:
       - '9093:9093'
-    links:
-      - zookeeper
-    container_name: local_kafka_target
+    container_name: kafka_target
     environment:
       - KAFKA_BROKER_ID=2
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper2:2181
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zk2:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
-      - KAFKA_CFG_LISTENERS=CLIENT://:9092,EXTERNAL://:9093
-      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka-target:9092,EXTERNAL://localhost:9093
+      - KAFKA_CFG_LISTENERS=CLIENT://:29092,EXTERNAL://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=CLIENT://kafka-target:29092,EXTERNAL://localhost:9093
       - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=CLIENT
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
+  
+  mirrormaker:
+    build: ./mirrormaker
+    container_name: mm2
+    environment:
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - SOURCE=kafka:29092
+      - DESTINATION=kafka-target:29092
+      - TOPICS=customer
+      - ACLS_ENABLED=false
+    volumes:
+      - glue-schema-registry-plugins:/opt/plugins
+    depends_on:
+      - kafka
+      - kafka-target
 
   localstack:
     container_name: "${LOCALSTACK_DOCKER_NAME-localstack_main}"
@@ -61,3 +70,12 @@ services:
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
       - "/var/run/docker.sock:/var/run/docker.sock"
+
+volumes:
+  glue-schema-registry-plugins:
+    driver: local
+    driver_opts:
+      type: none
+      device: /Users/rakssubh/Workspace/aws-gsr-subham
+      o: bind
+
