Dockerfile and mm2 config for mm2 container

--- a/integration-tests/mirrormaker/mm2-configs/connect-standalone.properties
+++ b/integration-tests/mirrormaker/mm2-configs/connect-standalone.properties
@@ -1,4 +1,4 @@
-bootstrap.servers=localhost:9093
+bootstrap.servers=${DESTINATION}
 
 key.converter=org.apache.kafka.connect.converters.ByteArrayConverter
 value.converter=org.apache.kafka.connect.converters.ByteArrayConverter
@@ -9,4 +9,4 @@ value.converter.schemas.enable=true
 offset.storage.file.filename=/tmp/connect.offsets
 offset.flush.interval.ms=10000
 
-plugin.path=/Users/rakssubh/Workspace/aws-gsr
+plugin.path=/opt/plugins/
