--- a/integration-tests/mirrormaker/mm2-configs/mirror-checkpoint-connector.properties
+++ b/integration-tests/mirrormaker/mm2-configs/mirror-checkpoint-connector.properties
@@ -3,8 +3,8 @@ connector.class=org.apache.kafka.connect.mirror.MirrorCheckpointConnector
 clusters=src,dst
 source.cluster.alias=src
 target.cluster.alias=dst
-source.cluster.bootstrap.servers=localhost:9092
-target.cluster.bootstrap.servers=localhost:9093
+source.cluster.bootstrap.servers=${SOURCE}
+target.cluster.bootstrap.servers=${DESTINATION}
 tasks.max=1
 key.converter=org.apache.kafka.connect.converters.ByteArrayConverter
 value.converter=org.apache.kafka.connect.converters.ByteArrayConverter
