--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -1,13 +1,13 @@
 services:
-  zk1:
+  zookeeper-kafka:
     image: 'public.ecr.aws/bitnami/zookeeper:latest'
-    container_name: zk1
+    container_name: zk-kafka
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
-  
-  zk2:
+
+  zookeeper-kafka-target:
     image: 'public.ecr.aws/bitnami/zookeeper:latest'
-    container_name: zk2
+    container_name: zk-kafka-target
     environment:
       - ALLOW_ANONYMOUS_LOGIN=yes
 
@@ -18,7 +18,7 @@ services:
     container_name: kafka
     environment:
       - KAFKA_BROKER_ID=1
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zk1:2181
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-kafka:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
       - KAFKA_CFG_LISTENERS=CLIENT://:29092,EXTERNAL://:9092
@@ -33,7 +33,7 @@ services:
     container_name: kafka_target
     environment:
       - KAFKA_BROKER_ID=2
-      - KAFKA_CFG_ZOOKEEPER_CONNECT=zk2:2181
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-kafka-target:2181
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CLIENT:PLAINTEXT,EXTERNAL:PLAINTEXT
       - KAFKA_CFG_LISTENERS=CLIENT://:29092,EXTERNAL://:9093
