--- a/integration-tests/mirrormaker/mm2-configs/mirror-source-connector.properties
+++ b/integration-tests/mirrormaker/mm2-configs/mirror-source-connector.properties
@@ -3,15 +3,15 @@ connector.class=org.apache.kafka.connect.mirror.MirrorSourceConnector
 clusters=src,dst
 source.cluster.alias=src
 target.cluster.alias=dst
-source.cluster.bootstrap.servers=localhost:9092
-target.cluster.bootstrap.servers=localhost:9093
+source.cluster.bootstrap.servers=${SOURCE}
+target.cluster.bootstrap.servers=${DESTINATION}
 topics=^customer[\\w]*
 tasks.max=2
 key.converter=com.amazonaws.services.crossregion.schemaregistry.kafkaconnect.CrossRegionReplicationConverter
 value.converter=com.amazonaws.services.crossregion.schemaregistry.kafkaconnect.CrossRegionReplicationConverter
 replication.factor=1
 offset-syncs.topic.replication.factor=1
-sync.topic.acls.enabled=false
+sync.topic.acls.enabled=${ACLS_ENABLED}
 refresh.topics.interval.seconds=20
 refresh.groups.interval.seconds=20
 consumer.group.id=mm2-msc-cons
