--- a/integration-tests/mirrormaker/mm2-configs/mirror-source-connector.properties
+++ b/integration-tests/mirrormaker/mm2-configs/mirror-source-connector.properties
@@ -5,7 +5,7 @@ source.cluster.alias=src
 target.cluster.alias=dst
 source.cluster.bootstrap.servers=${SOURCE}
 target.cluster.bootstrap.servers=${DESTINATION}
-topics=^customer[\\w]*
+topics=${TOPICS}
 tasks.max=2
 key.converter=com.amazonaws.services.crossregion.schemaregistry.kafkaconnect.CrossRegionReplicationConverter
 value.converter=com.amazonaws.services.crossregion.schemaregistry.kafkaconnect.CrossRegionReplicationConverter
@@ -22,15 +22,15 @@ key.converter.source.endpoint=https://glue.us-east-1.amazonaws.com
 key.converter.source.region=us-east-1
 key.converter.target.endpoint=https://glue.us-east-2.amazonaws.com
 key.converter.target.region=us-east-2
-key.converter.registry.name=migration
+key.converter.registry.name=default-registry
 key.converter.schemaAutoRegistrationEnabled=true
-key.converter.avroRecordType=GENERIC_RECORD
+#key.converter.avroRecordType=GENERIC_RECORD
 value.converter.source.endpoint=https://glue.us-east-1.amazonaws.com
 value.converter.source.region=us-east-1
 value.converter.target.endpoint=https://glue.us-east-2.amazonaws.com
 value.converter.target.region=us-east-2
-value.converter.registry.name=migration
+value.converter.registry.name=default-registry
 value.converter.schemaAutoRegistrationEnabled=true
-value.converter.avroRecordType=GENERIC_RECORD
+#value.converter.avroRecordType=GENERIC_RECORD
 errors.log.enable=true
 errors.log.include.messages=true
