--- a/integration-tests/mirrormaker/Dockerfile
+++ b/integration-tests/mirrormaker/Dockerfile
@@ -5,6 +5,19 @@ RUN install_packages gettext
 RUN mkdir -p /opt/plugins
 RUN chown 1234 /opt/plugins
 
+RUN mkdir -p ~/.aws
+RUN chmod 1234 ~/.aws
+
+# Install the AWS CLI
+RUN \
+  apt-get update -y && \
+  apt-get install -y wget vim python3 unzip python-is-python3 python3-venv && \
+  wget "s3.amazonaws.com/aws-cli/awscli-bundle.zip" -O "awscli-bundle.zip" && \
+  unzip awscli-bundle.zip && \
+  ./awscli-bundle/install -i /usr/local/aws -b /usr/local/bin/aws && \
+  rm awscli-bundle.zip && \
+  rm -rf awscli-bundle
+
 ADD ./mm2-configs/connect-standalone.properties /opt/mm2/connect-standalone.properties
 ADD ./mm2-configs/mirror-checkpoint-connector.properties /opt/mm2/mirror-checkpoint-connector.properties
 ADD ./mm2-configs/mirror-heartbeat-connector.properties /opt/mm2/mirror-heartbeat-connector.properties
@@ -20,6 +33,9 @@ ENV TOPICS .*
 ENV SOURCE "localhost:9092"
 ENV DESTINATION "localhost:9093"
 ENV ACLS_ENABLED "false"
+ENV AWS_ACCESS_KEY_ID ""
+ENV AWS_SECRET_ACCESS_KEY ""
+ENV AWS_SESSION_TOKEN ""
 
 USER 1234
 CMD /opt/mm2/run.sh
