Configuring default aws profile

--- a/integration-tests/mirrormaker/Dockerfile
+++ b/integration-tests/mirrormaker/Dockerfile
@@ -33,9 +33,7 @@ ENV TOPICS .*
 ENV SOURCE "localhost:9092"
 ENV DESTINATION "localhost:9093"
 ENV ACLS_ENABLED "false"
-ENV AWS_ACCESS_KEY_ID ""
-ENV AWS_SECRET_ACCESS_KEY ""
-ENV AWS_SESSION_TOKEN ""
+ENV AWS_PROFILE "default"
 
 USER 1234
 CMD /opt/mm2/run.sh
