--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -30,7 +30,7 @@ services:
     image: 'public.ecr.aws/bitnami/kafka:2.8'
     ports:
       - '9093:9093'
-    container_name: kafka_target
+    container_name: kafka-target
     environment:
       - KAFKA_BROKER_ID=2
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper-kafka-target:2181
@@ -43,13 +43,14 @@ services:
   
   mirrormaker:
     build: ./mirrormaker
-    container_name: mm2
+    container_name: mirrormaker
     environment:
       - ALLOW_PLAINTEXT_LISTENER=yes
       - SOURCE=kafka:29092
       - DESTINATION=kafka-target:29092
       - TOPICS=^SchemaRegistryTests.*
       - ACLS_ENABLED=false
+      - AWS_PROFILE=default
     volumes:
       - glue-schema-registry-plugins:/opt/plugins
       - "${HOME}/.aws/:/.aws:ro"
