MM2 will pickup topics prefixed with SchemaReplicationTests only

--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -48,7 +48,7 @@ services:
       - ALLOW_PLAINTEXT_LISTENER=yes
       - SOURCE=kafka:29092
       - DESTINATION=kafka-target:29092
-      - TOPICS=^SchemaRegistryTests.*
+      - TOPICS=^SchemaReplicationTests.*
       - ACLS_ENABLED=false
       - AWS_PROFILE=default
     volumes:
