Issue Fix: Order of schema versions in the source are honoured in the target

--- a/integration-tests/mirrormaker/mm2-configs/mirror-source-connector.properties
+++ b/integration-tests/mirrormaker/mm2-configs/mirror-source-connector.properties
@@ -22,13 +22,15 @@ key.converter.source.endpoint=https://glue.us-east-1.amazonaws.com
 key.converter.source.region=us-east-1
 key.converter.target.endpoint=https://glue.us-east-2.amazonaws.com
 key.converter.target.region=us-east-2
-key.converter.registry.name=default-registry
+key.converter.source.registry.name=default-registry
+key.converter.target.registry.name=default-registry
 key.converter.schemaAutoRegistrationEnabled=true
 value.converter.source.endpoint=https://glue.us-east-1.amazonaws.com
 value.converter.source.region=us-east-1
 value.converter.target.endpoint=https://glue.us-east-2.amazonaws.com
 value.converter.target.region=us-east-2
-value.converter.registry.name=default-registry
+value.converter.source.registry.name=default-registry
+value.converter.target.registry.name=default-registry
 value.converter.schemaAutoRegistrationEnabled=true
 errors.log.enable=true
 errors.log.include.messages=true
