--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -68,6 +68,11 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.glue</groupId>
+            <artifactId>schema-registry-cross-region-kafkaconnect-converter</artifactId>
+            <version>${parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-kafkastreams-serde</artifactId>
             <version>${parent.version}</version>
         </dependency>
