--- a/serializer-deserializer/pom.xml
+++ b/serializer-deserializer/pom.xml
@@ -104,7 +104,7 @@
         <dependency>
             <groupId>com.github.erosb</groupId>
             <artifactId>everit-json-schema</artifactId>
-            <version>1.14.2</version>
+            <version>${everit.json.schema.version}</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-collections</groupId>
