--- a/avro-flink-serde/pom.xml
+++ b/avro-flink-serde/pom.xml
@@ -141,7 +141,7 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-avro</artifactId>
-            <version>1.12.2</version>
+            <version>1.20.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.apache.commons</groupId>
@@ -152,8 +152,8 @@
 
         <dependency>
             <groupId>org.apache.flink</groupId>
-            <artifactId>flink-streaming-java_2.11</artifactId>
-            <version>1.12.2</version>
+            <artifactId>flink-streaming-java</artifactId>
+            <version>1.20.1</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
