--- a/native-schema-registry/pom.xml
+++ b/native-schema-registry/pom.xml
@@ -148,7 +148,7 @@
                                     --no-fallback
                                     --shared
                                     -g
-                                    -H:CLibraryPath=${project.basedir}
+                                    -H:CLibraryPath=${project.basedir}/c/build/src
                                     -H:ResourceConfigurationFiles=${project.basedir}/src/main/resources/resource-config.json
                                 </buildArgs>
                             </buildArgs>
