--- a/native-schema-registry/c/CMakeLists.txt
+++ b/native-schema-registry/c/CMakeLists.txt
@@ -5,6 +5,7 @@ IF (APPLE)
 ENDIF()
 project(native_schema_registry_c C)
 set(CMAKE_C_STANDARD 99)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 ##Global variables
 #Path to GraalVM generated shared library
@@ -19,15 +20,18 @@ ELSEIF(APPLE)
 ELSE()
     set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME ${LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME_PREFIX}.so)
 ENDIF()
-
 set(DATA_TYPES_MODULE_NAME native_schema_registry_c_data_types)
 set(SERDE_MODULE_NAME native_schema_registry_c)
 set(AWS_COMMON_MEMALLOC aws_common_memalloc)
 set(NATIVE_SCHEMA_REGISTRY_MODULE_NAME libnativeschemaregistry)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-
 include_directories("include")
 include_directories(${LIB_NATIVE_SCHEMA_REGISTRY_PATH})
+# --- Python Integration ---
+find_package(Python3 REQUIRED COMPONENTS Development)
+
+include_directories(${Python3_INCLUDE_DIRS})
+link_libraries(${Python3_LIBRARIES})
 
 add_subdirectory("src")
 include (CTest)
