Native schema registry | Initial common trunk for all languages and platforms (#10)
* Fix get schema attribute test failure

* Initial common trunk for all platforms

* Common trunk changes for multi-lang GSR (native-schema-registry)

* Common trunk | delete unwanted build-time file from commit

* Common trunk | Update README to add full build setps order + specific instructions for AmazonLinux platform

--- a/native-schema-registry/c/CMakeLists.txt
+++ b/native-schema-registry/c/CMakeLists.txt
@@ -5,6 +5,7 @@ IF (APPLE)
 ENDIF()
 project(native_schema_registry_c C)
 set(CMAKE_C_STANDARD 99)
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 ##Global variables
 #Path to GraalVM generated shared library
@@ -28,6 +29,11 @@ set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
 include_directories("include")
 include_directories(${LIB_NATIVE_SCHEMA_REGISTRY_PATH})
+
+find_package(Python3 REQUIRED COMPONENTS Development)
+
+include_directories(${Python3_INCLUDE_DIRS})
+link_libraries(${Python3_LIBRARIES})
 
 add_subdirectory("src")
 include (CTest)
