--- a/native-schema-registry/src/main/resources/META-INF/native-image/software.amazon.glue/native-schema-registry/native-image.properties
+++ b/native-schema-registry/src/main/resources/META-INF/native-image/software.amazon.glue/native-schema-registry/native-image.properties
@@ -1,1 +1,1 @@
-Args = --initialize-at-build-time=org.slf4j,com.google.common.jimfs.SystemJimfsFileSystemProvider,com.google.common.jimfs.JimfsFileSystems
+Args = --initialize-at-build-time=org.slf4j,com.google.common.jimfs.SystemJimfsFileSystemProvider,com.google.common.jimfs.JimfsFileSystems,com.amazonaws.services.schemaregistry.utils.apicurio.FileDescriptorUtils,com.amazonaws.services.schemaregistry.serializer.ProtobufPreprocessor
