--- a/native-schema-registry/csharp/GSRProtobufExample/src/GSRProtobufExample.Shared/GSRProtobufExample.Shared.csproj
+++ b/native-schema-registry/csharp/GSRProtobufExample/src/GSRProtobufExample.Shared/GSRProtobufExample.Shared.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj" />
+    <ProjectReference Include="../../../AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj" />
   </ItemGroup>
 
   <ItemGroup>
