Add KafkaFlow Protobuf GSR Demo with Producers and Consumers
- Implemented Consumer project with message handlers for sample data types Analytics, Customer, Inventory, Notification, and Transaction.
- Developed GSR Protobuf Deserializer and Serializer for handling messages.
- Removed existing GSRProtobufExample project due a laundry list of build issues

--- a/native-schema-registry/csharp/KafkaFlowProtobufGsrDemo/src/Messages/Messages.csproj
+++ b/native-schema-registry/csharp/KafkaFlowProtobufGsrDemo/src/Messages/Messages.csproj
@@ -2,24 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
+    <RootNamespace>KafkaFlowProtobufGsrDemo.Messages</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf" Version="3.21.4" />
-    <PackageReference Include="Grpc.Tools" Version="2.50.0">
+    <PackageReference Include="Google.Protobuf" Version="3.25.1" />
+    <PackageReference Include="Grpc.Tools" Version="2.59.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../../../AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Protobuf Include="Protos/*.proto" ProtoRoot="Protos" />
+    <Protobuf Include="Protos/**/*.proto" GrpcServices="None" />
   </ItemGroup>
 
 </Project>
