--- a/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
+++ b/native-schema-registry/csharp/AWSGsrSerDe/AWSGsrSerDe/AWSGsrSerDe.csproj
@@ -12,6 +12,7 @@
     <ItemGroup>
       <PackageReference Include="Apache.Avro" Version="1.11.0" />
       <PackageReference Include="Google.Protobuf" Version="3.21.4" />
+      <PackageReference Include="KafkaFlow" Version="3.0.10" />
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
       <PackageReference Include="NJsonSchema" Version="10.8.0" />
       <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435">
