potentially portable cmake .so files

--- a/native-schema-registry/pom.xml
+++ b/native-schema-registry/pom.xml
@@ -150,6 +150,7 @@
                                     -g
                                     -H:CLibraryPath=${project.basedir}/c/build/src
                                     -H:ResourceConfigurationFiles=${project.basedir}/src/main/resources/resource-config.json
+                                    -H:Name=libnativeschemaregistry.so
                                 </buildArgs>
                             </buildArgs>
                         </configuration>
