Add Protobuf serializer and deserializer for KafkaFlow integration, update CMake configuration, and adjust project references

--- a/native-schema-registry/c/src/CMakeLists.txt
+++ b/native-schema-registry/c/src/CMakeLists.txt
@@ -13,6 +13,10 @@ set_target_properties(${AWS_COMMON_MEMALLOC} PROPERTIES
     BUILD_RPATH "$ORIGIN"
     INSTALL_RPATH "$ORIGIN"
 )
+set_target_properties(${AWS_COMMON_MEMALLOC} PROPERTIES
+    BUILD_RPATH "$ORIGIN"
+    INSTALL_RPATH "$ORIGIN"
+)
 target_link_libraries(${AWS_COMMON_MEMALLOC} PRIVATE ${AWS_C_COMMON})
 
 #Adding modules in the build order.
@@ -22,6 +26,10 @@ add_library(
         read_only_byte_array.c
         mutable_byte_array.c
         glue_schema_registry_error.c
+)
+set_target_properties(${DATA_TYPES_MODULE_NAME} PROPERTIES
+    BUILD_RPATH "$ORIGIN"
+    INSTALL_RPATH "$ORIGIN"
 )
 set_target_properties(${DATA_TYPES_MODULE_NAME} PROPERTIES
     BUILD_RPATH "$ORIGIN"
@@ -85,6 +93,10 @@ set_target_properties(${SERDE_MODULE_NAME} PROPERTIES
     BUILD_RPATH "$ORIGIN"
     INSTALL_RPATH "$ORIGIN"
 )
+set_target_properties(${SERDE_MODULE_NAME} PROPERTIES
+    BUILD_RPATH "$ORIGIN"
+    INSTALL_RPATH "$ORIGIN"
+)
 
 target_link_libraries(
         ${DATA_TYPES_MODULE_NAME}
@@ -130,7 +142,10 @@ set_target_properties(
         SWIG_USE_TARGET_INCLUDE_DIRECTORIES TRUE
         BUILD_RPATH "$ORIGIN"
         INSTALL_RPATH "$ORIGIN"
+        BUILD_RPATH "$ORIGIN"
+        INSTALL_RPATH "$ORIGIN"
 )
+
 
 swig_link_libraries(
         ${CSHARP_MODULE_NAME}
