Add Protobuf serializer and deserializer for KafkaFlow integration, update CMake configuration, and adjust project references

--- a/native-schema-registry/c/CMakeLists.txt
+++ b/native-schema-registry/c/CMakeLists.txt
@@ -20,20 +20,21 @@ ELSEIF(APPLE)
 ELSE()
     set(LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME ${LIB_NATIVE_SCHEMA_REGISTRY_LIBRARY_NAME_PREFIX}.so)
 ENDIF()
-
 set(DATA_TYPES_MODULE_NAME native_schema_registry_c_data_types)
 set(SERDE_MODULE_NAME native_schema_registry_c)
 set(AWS_COMMON_MEMALLOC aws_common_memalloc)
 set(NATIVE_SCHEMA_REGISTRY_MODULE_NAME libnativeschemaregistry)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 
+##Global RPATH Configuration for Portable Libraries
+set(CMAKE_SKIP_BUILD_RPATH FALSE)
+set(CMAKE_BUILD_WITH_INSTALL_RPATH TRUE)
+set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
+set(CMAKE_INSTALL_RPATH "$ORIGIN")
+
 include_directories("include")
 include_directories(${LIB_NATIVE_SCHEMA_REGISTRY_PATH})
-
-find_package(Python3 REQUIRED COMPONENTS Development)
-
-include_directories(${Python3_INCLUDE_DIRS})
-link_libraries(${Python3_LIBRARIES})
+# --- Python Integration ---
 
 add_subdirectory("src")
 include (CTest)
