--- a/native-schema-registry/ProtobufGSRKafkaDemo/config/gsr.properties
+++ b/native-schema-registry/ProtobufGSRKafkaDemo/config/gsr.properties
@@ -3,7 +3,7 @@ endpoint=https://glue.us-east-1.amazonaws.com
 # proxyUrl=http://your-proxy:8080
 
 # Schema Registry Configuration
-registry.name=protobuf-kafka-demo-registry
+registry.name=default-registry
 description=Multi-threaded Protobuf GSR Kafka Demo with 5 message types
 compatibility=FORWARD
 dataFormat=PROTOBUF
